# HarmonyAudio

./: README.md  build.gradle
entry/: build.gradle
entry/src/main/: config.json
entry/src/main/cpp/: CMakeLists.txt  OpenSLESRecord.cpp  OpenSLESRecord.h  hello.cpp
entry/src/main/java/cn/zybwz/audio/: MainAbility.java  MyApplication.java
entry/src/main/java/cn/zybwz/audio/slice/: MainAbilitySlice.java
entry/src/main/resources/base/layout/: main_ability_slice.xml
entry/src/ohosTest/java/cn/zybwz/audio/: ExampleOhosTest.java
entry/src/test/java/cn/zybwz/audio/: ExampleTest.java
